# pygeoutils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  Untitled.ipynb  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md  bugreport.yml
.github/workflows/: release.yml  test.yml
ci/requirements/: environment-dev.yml  environment.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml
docs/: conf.py  modules.rst  pygeoutils.rst
pygeoutils/: __init__.py  _utils.py  exceptions.py  geotools.py  pygeoutils.py  utils.py
src/pygeoutils/: __init__.py  _utils.py  exceptions.py  geotools.py  pygeoutils.py  smoothing.py
tests/: test_exceptions.py  test_pygeoutils.py  test_smoothing.py
