[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[project]
name = "pygeoutils"
description = "Utilities for manipulating geospatial, (Geo)JSON, and (Geo)TIFF data."
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Taher Chegini", email = "cheginit@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "cytoolz",
  "geopandas>=0.10",
  "netcdf4",
  "numpy>=1.21",
  "pyproj>=3.0.1",
  "rasterio>=1.2",
  "rioxarray>=0.11",
  "scipy",
  "shapely>=1.8.5",
  "ujson",
  "xarray>=2023.01",
]
[project.optional-dependencies]
test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-xdist[psutil]",
]
[project.urls]
CI = "https://github.com/hyriver/pygeoutils/actions"
Changelog = "https://docs.hyriver.io/changelogs/pygeoutils.html"
Homepage = "https://docs.hyriver.io/readme/pygeoutils.html"
Issues = "https://github.com/hyriver/pygeoutils/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
pygeoutils = ["py.typed"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
fallback_version = "999"

[tool.black]
line-length = 100

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pygeoutils"
line_length = 100
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
addopts = '--ignore=noxfile.py -n=auto -v --cov=pygeoutils --cov-report xml --durations=5'
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*invalid value encountered in cast.*",
  "ignore:.*'cgi' is deprecated.*",
]
testpaths = [
  "tests",
  "pygeoutils"
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/print_versions.py"
]
parallel = true
source = ['pygeoutils']

[tool.bandit]
targets = [
  "pygeoutils"
]

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox"

[tool.pycln]
all = true
expand_stars = true
no_gitignore = false
verbose = true

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/"
]
include = ["pygeoutils"]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
typeCheckingMode = "strict"

[tool.refurb]
python_version = "3.8"
quiet = true
